testsuite/tests/checks/numeric_literals/test.out
num.adb:15:9: error: numeric literal
15 |    F := 1.0;                            -- FLAG
   |         ^^^ 

num.adb:18:9: error: numeric literal
18 |    I := 3 * I;                          -- FLAG
   |         ^ 

